--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,10 @@
 	<classpathentry kind="src" path="impl/hsqldb/pagila/src/main"/>
 	<classpathentry kind="src" path="impl/mariadb/sakila/src/test"/>
 	<classpathentry kind="src" path="src/samples/java"/>
+	<classpathentry kind="src" path="src/common/pagila"/>
+	<classpathentry kind="src" path="impl/hsqldb/pagila/src/test"/>
+	<classpathentry kind="src" path="src/common/sakila"/>
+	<classpathentry kind="src" path="impl/pg/pagila/hsqldb"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache CSV"/>
