Refactor (autopatch, qualify more names in generated sources, support entity predicates)

--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,9 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/tools"/>
+	<classpathentry kind="src" path="impl/pg/relaxetest/src/main"/>
+	<classpathentry kind="src" path="build/impl/pg/relaxetest/src/gen"/>
+	<classpathentry kind="src" path="impl/pg/relaxetest/src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="build/impl/hsqldb/pagila/src/gen"/>
 	<classpathentry kind="src" path="build/impl/mariadb/sakila/src/gen"/>
