--- a/ivy.xml
+++ b/ivy.xml
@@ -28,6 +28,8 @@
         <!-- testing dependencies -->
         <dependency org="junit" name="junit" rev="4.11" conf="test"/>
         <dependency org="org.mortbay.jetty" name="jetty" rev="6.1H.22" conf="test" />
+        
+        <dependency org="com.tacitknowledge" name="autopatch" rev="1.4.2" conf="runtime"/>
                 
         <dependency org="com.google.gwt" name="gwt-user" rev="2.5.1" conf="gwt"/>
         <dependency org="com.google.gwt" name="gwt-dev" rev="2.5.1" conf="gwt"/>
