--- a/src/main/java/com/appspot/relaxe/source/METADATA_IMPLEMENTATION.in
+++ b/src/main/java/com/appspot/relaxe/source/METADATA_IMPLEMENTATION.in
@@ -22,20 +22,20 @@ import com.appspot.relaxe.expr.TableReference;
 class {{table-interface}}MetaData
         extends EnumMetaData
     <
-        {{table-interface}}.Attribute, 
-        {{table-interface}}.Reference,
-        {{table-interface}}.Type,
-        {{table-interface}},
-        {{table-interface}}.Mutable,
-        {{table-interface}}.Holder,
-        {{table-interface}}.Factory,
-        {{table-interface}}.MetaData
+        {{table-interface-qualified-name}}.Attribute, 
+        {{table-interface-qualified-name}}.Reference,
+        {{table-interface-qualified-name}}.Type,
+        {{table-interface-qualified-name}},
+        {{table-interface-qualified-name}}.Mutable,
+        {{table-interface-qualified-name}}.Holder,
+        {{table-interface-qualified-name}}.Factory,
+        {{table-interface-qualified-name}}.MetaData
     >
-	implements {{table-interface}}.MetaData
+	implements {{table-interface-qualified-name}}.MetaData
 {
 	// private static final long serialVersionUID = 1L;
-    private static {{table-interface}}MetaData instance = null;
-    private final {{table-interface}}.Factory factory = new FactoryImpl();
+    private static {{table-interface-qualified-name}}MetaData instance = null;
+    private final {{table-interface-qualified-name}}.Factory factory = new FactoryImpl();
     private com.appspot.relaxe.meta.BaseTable table;
     
     @Override
@@ -43,13 +43,13 @@ class {{table-interface}}MetaData
 		{{create-get-base-table-body}}
     }
     
-    private java.util.Map<{{table-interface}}.Attribute, com.appspot.relaxe.ent.value.Attribute<{{table-interface}}.Attribute, {{table-interface}}, {{table-interface}}.Mutable, ?, ?, ?, ?>> keyMap = 
-    	new java.util.HashMap<{{table-interface}}.Attribute, com.appspot.relaxe.ent.value.Attribute<{{table-interface}}.Attribute, {{table-interface}}, {{table-interface}}.Mutable, ?, ?, ?, ?>>();        
+    private java.util.Map<{{table-interface-qualified-name}}.Attribute, com.appspot.relaxe.ent.value.Attribute<{{table-interface-qualified-name}}.Attribute, {{table-interface-qualified-name}}, {{table-interface-qualified-name}}.Mutable, ?, ?, ?, ?>> keyMap = 
+    	new java.util.HashMap<{{table-interface-qualified-name}}.Attribute, com.appspot.relaxe.ent.value.Attribute<{{table-interface-qualified-name}}.Attribute, {{table-interface-qualified-name}}, {{table-interface-qualified-name}}.Mutable, ?, ?, ?, ?>>();        
 
-    private java.util.Map<{{table-interface}}.Attribute, com.appspot.relaxe.ent.value.Attribute<{{table-interface}}.Attribute, {{table-interface}}, {{table-interface}}.Mutable, ?, ?, ?, ?>> getKeyMap() {return this.keyMap; }
+    private java.util.Map<{{table-interface-qualified-name}}.Attribute, com.appspot.relaxe.ent.value.Attribute<{{table-interface-qualified-name}}.Attribute, {{table-interface-qualified-name}}, {{table-interface-qualified-name}}.Mutable, ?, ?, ?, ?>> getKeyMap() {return this.keyMap; }
     
     @Override
-	public com.appspot.relaxe.ent.value.Attribute<{{table-interface}}.Attribute, {{table-interface}}, {{table-interface}}.Mutable, ?, ?, ?, ?> getKey({{table-interface}}.Attribute a) {
+	public com.appspot.relaxe.ent.value.Attribute<{{table-interface-qualified-name}}.Attribute, {{table-interface-qualified-name}}, {{table-interface-qualified-name}}.Mutable, ?, ?, ?, ?> getKey({{table-interface-qualified-name}}.Attribute a) {
 		return getKeyMap().get(a);
 	}
 	
@@ -62,8 +62,8 @@ class {{table-interface}}MetaData
 
 	{{reference-key-map-list}}
 
-	private java.util.Map<{{table-interface}}.Reference, EntityKey<{{table-interface}}.Attribute, {{table-interface}}.Reference, {{table-interface}}.Type, {{table-interface}}, {{table-interface}}.Mutable, {{table-interface}}.Holder, {{table-interface}}.Factory, {{table-interface}}.MetaData, ?, ?, ?, ?, ?, ?, ?, ?, ?>> entityKeyMap = 
-		new java.util.TreeMap<{{table-interface}}.Reference, EntityKey<{{table-interface}}.Attribute, {{table-interface}}.Reference, {{table-interface}}.Type, {{table-interface}}, {{table-interface}}.Mutable, {{table-interface}}.Holder, {{table-interface}}.Factory, {{table-interface}}.MetaData, ?, ?, ?, ?, ?, ?, ?, ?, ?>>();
+	private java.util.Map<{{table-interface-qualified-name}}.Reference, EntityKey<{{table-interface-qualified-name}}.Attribute, {{table-interface-qualified-name}}.Reference, {{table-interface-qualified-name}}.Type, {{table-interface-qualified-name}}, {{table-interface-qualified-name}}.Mutable, {{table-interface-qualified-name}}.Holder, {{table-interface-qualified-name}}.Factory, {{table-interface-qualified-name}}.MetaData, ?, ?, ?, ?, ?, ?, ?, ?, ?>> entityKeyMap = 
+		new java.util.TreeMap<{{table-interface-qualified-name}}.Reference, EntityKey<{{table-interface-qualified-name}}.Attribute, {{table-interface-qualified-name}}.Reference, {{table-interface-qualified-name}}.Type, {{table-interface-qualified-name}}, {{table-interface-qualified-name}}.Mutable, {{table-interface-qualified-name}}.Holder, {{table-interface-qualified-name}}.Factory, {{table-interface-qualified-name}}.MetaData, ?, ?, ?, ?, ?, ?, ?, ?, ?>>();
 		
 	
 	{{attribute-key-container-implementation}}
@@ -77,48 +77,48 @@ class {{table-interface}}MetaData
     }
     
     @Override
-    public Class<{{table-interface}}.Attribute> getAttributeNameType() {
-          return {{table-interface}}.Attribute.class;
+    public Class<{{table-interface-qualified-name}}.Attribute> getAttributeNameType() {
+          return {{table-interface-qualified-name}}.Attribute.class;
     }
     
     @Override
-    public Class<{{table-interface}}.Reference> getReferenceNameType() {
-    	return {{table-interface}}.Reference.class;
+    public Class<{{table-interface-qualified-name}}.Reference> getReferenceNameType() {
+    	return {{table-interface-qualified-name}}.Reference.class;
     }
     
     
     @Override
-    public {{table-interface}}.Factory getFactory() {
+    public {{table-interface-qualified-name}}.Factory getFactory() {
 		return factory;       
     }
     
     {{create-identity-map-method}}
     
-    public static {{table-interface}}MetaData getInstance() {
-    	if ({{table-interface}}MetaData.instance == null) {
-    		{{table-interface}}MetaData.instance = new {{table-interface}}MetaData();
+    public static {{table-interface-qualified-name}}MetaData getInstance() {
+    	if ({{table-interface-qualified-name}}MetaData.instance == null) {
+    		{{table-interface-qualified-name}}MetaData.instance = new {{table-interface-qualified-name}}MetaData();
     	}
     	
-    	return {{table-interface}}MetaData.instance; 
+    	return {{table-interface-qualified-name}}MetaData.instance; 
     }
     
     @Override
-    public {{table-interface}}.Type type() {
-     	return {{table-interface}}.Type.TYPE;
+    public {{table-interface-qualified-name}}.Type type() {
+     	return {{table-interface-qualified-name}}.Type.TYPE;
     }   
     
     @Override
-	protected Column map(BaseTable table, {{table-interface}}.Attribute a) {		
+	protected Column map(BaseTable table, {{table-interface-qualified-name}}.Attribute a) {		
 		return table.getColumnMap().get(a.identifier());
 	}
 
 	@Override
-	protected ForeignKey map(BaseTable table, {{table-interface}}.Reference r) {
+	protected ForeignKey map(BaseTable table, {{table-interface-qualified-name}}.Reference r) {
 		return table.foreignKeys().get(r.identifier());			
 	}
 	
 	@Override
-	public {{table-interface}}.MetaData self() {
+	public {{table-interface-qualified-name}}.MetaData self() {
 		return this;
 	}		
 		
@@ -126,23 +126,23 @@ class {{table-interface}}MetaData
 	
 
 	@Override
-	public {{table-interface}}.Builder newBuilder(TableReference referencing, ForeignKey referencedBy, TableReference tableRef, EntityBuildContext ctx, com.appspot.relaxe.ent.UnificationContext unificationContext)
+	public {{table-interface-qualified-name}}.Builder newBuilder(TableReference referencing, ForeignKey referencedBy, TableReference tableRef, EntityBuildContext ctx, com.appspot.relaxe.ent.UnificationContext unificationContext)
 		throws com.appspot.relaxe.ent.EntityException {
 		return new BuilderImpl(referencing, referencedBy, tableRef, ctx, unificationContext);
 	}	
 
 	@Override
 	public EntityKey<
-		{{table-interface}}.Attribute, 
-		{{table-interface}}.Reference, 
-		{{table-interface}}.Type, 
-		{{table-interface}}, 
-		{{table-interface}}.Mutable, 
-		{{table-interface}}.Holder, 
-		{{table-interface}}.Factory, 
-		{{table-interface}}.MetaData, ?, ?, ?, ?, ?, ?, ?, ?, ?
+		{{table-interface-qualified-name}}.Attribute, 
+		{{table-interface-qualified-name}}.Reference, 
+		{{table-interface-qualified-name}}.Type, 
+		{{table-interface-qualified-name}}, 
+		{{table-interface-qualified-name}}.Mutable, 
+		{{table-interface-qualified-name}}.Holder, 
+		{{table-interface-qualified-name}}.Factory, 
+		{{table-interface-qualified-name}}.MetaData, ?, ?, ?, ?, ?, ?, ?, ?, ?
 	> 
-	getEntityKey({{table-interface}}.Reference ref) {			
+	getEntityKey({{table-interface-qualified-name}}.Reference ref) {			
 		if (ref == null) {
 			throw new NullPointerException("ref");
 		}
@@ -152,24 +152,24 @@ class {{table-interface}}MetaData
 		
 		
     public static class FactoryImpl
-    	implements {{table-interface}}.Factory {
+    	implements {{table-interface-qualified-name}}.Factory {
         @Override
-        public {{table-interface}}.Mutable newEntity() {
+        public {{table-interface-qualified-name}}.Mutable newEntity() {
            return new {{table-impl-class}}.{{mutable-entity-impl-class}}();
         }
         
         @Override
-		public {{table-interface}}.Holder newHolder({{table-interface}} value) {
-			return {{table-interface}}.Holder.valueOf(value);
+		public {{table-interface-qualified-name}}.Holder newHolder({{table-interface-qualified-name}} value) {
+			return {{table-interface-qualified-name}}.Holder.valueOf(value);
 		}
 
 		@Override
-		public {{table-interface}}.MetaData getMetaData() {
-			return {{table-interface}}MetaData.instance;
+		public {{table-interface-qualified-name}}.MetaData getMetaData() {
+			return {{table-interface-qualified-name}}MetaData.instance;
 		}
 
 		@Override
-		public {{table-interface}}.Factory self() {
+		public {{table-interface-qualified-name}}.Factory self() {
 			return this;
 		}
     }
@@ -244,21 +244,21 @@ class {{table-interface}}MetaData
     
 	public static class BuilderImpl
 		extends com.appspot.relaxe.ent.DefaultEntityBuilder<
-			{{table-interface}}.Attribute, 
-			{{table-interface}}.Reference, 
-			{{table-interface}}.Type, 
-			{{table-interface}}, 
-			{{table-interface}}.Mutable, 
-			{{table-interface}}.Holder, 
-			{{table-interface}}.Factory, 
-			{{table-interface}}.MetaData
+			{{table-interface-qualified-name}}.Attribute, 
+			{{table-interface-qualified-name}}.Reference, 
+			{{table-interface-qualified-name}}.Type, 
+			{{table-interface-qualified-name}}, 
+			{{table-interface-qualified-name}}.Mutable, 
+			{{table-interface-qualified-name}}.Holder, 
+			{{table-interface-qualified-name}}.Factory, 
+			{{table-interface-qualified-name}}.MetaData
 		>
-		implements {{table-interface}}.Builder {
+		implements {{table-interface-qualified-name}}.Builder {
 		
 		private Linker[] linkerList = {};
 								
 		private interface Linker {
-			void link(com.appspot.relaxe.ent.DataObject src, {{table-interface}}.Holder dest);
+			void link(com.appspot.relaxe.ent.DataObject src, {{table-interface-qualified-name}}.Holder dest);
 		}
 		
 		public BuilderImpl(TableReference referencing, ForeignKey referencedBy, com.appspot.relaxe.expr.TableReference tableRef, com.appspot.relaxe.ent.EntityBuildContext ctx, com.appspot.relaxe.ent.UnificationContext unificationContext) 
@@ -269,13 +269,13 @@ class {{table-interface}}MetaData
 		}
 
 		@Override
-		public {{table-interface}}.MetaData getMetaData() {			
-			return {{table-interface}}MetaData.getInstance();
+		public {{table-interface-qualified-name}}.MetaData getMetaData() {			
+			return {{table-interface-qualified-name}}MetaData.getInstance();
 		}
 		
 		@Override
-		public {{table-interface}}.Holder read(com.appspot.relaxe.ent.DataObject src) {			
-			{{table-interface}}.Holder e = super.read(src);
+		public {{table-interface-qualified-name}}.Holder read(com.appspot.relaxe.ent.DataObject src) {			
+			{{table-interface-qualified-name}}.Holder e = super.read(src);
 			
 			for (Linker lnk : linkerList) {
 				lnk.link(src, e);
