--- a/src/main/java/com/appspot/relaxe/source/FOREIGN_KEY_IMPLEMENTATION.in
+++ b/src/main/java/com/appspot/relaxe/source/FOREIGN_KEY_IMPLEMENTATION.in
@@ -14,6 +14,7 @@
 			super(content);
 		}
 		
+		@Override
 		public com.appspot.relaxe.env.Environment getEnvironment() {
 			{{get-environment-body}}
 		}
