--- a/ivy.xml
+++ b/ivy.xml
@@ -36,7 +36,8 @@
         <dependency org="com.google.gwt" name="gwt-servlet" rev="2.5.1" conf="gwt"/>
         
         <!-- JDBC drivers -->
-        <dependency org="org.postgresql" name="postgresql" rev="9.3-1100-jdbc4" conf="jdbc" />        
+        <!--<dependency org="org.postgresql" name="postgresql" rev="9.3-1100-jdbc4" conf="jdbc" />-->        
+        <dependency org="org.postgresql" name="postgresql" rev="9.4-1201-jdbc41" conf="jdbc" />
         <dependency org="mysql" name="mysql-connector-java" rev="5.1.27" conf="jdbc"/>
         <dependency org="org.hsqldb" name="hsqldb" rev="2.3.1" conf="jdbc" />
         
